base/src/test/resources/failure/scope/unknown-prim.aya.txt
In file $FILE:1:5 ->

  1 | prim YYUT
           ^--^

Error: Unknown primitive `YYUT`

Parsing interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
